p6/tests/t061.gpl
int window_width = 42;
string window_height = "window_height must be of type int";
